# PalmLocNet

./: BN_mulPalmLocNet_dropout.py  gIoU_main_PalmLocNet_dropout .py  gIoU_main_mulPalmLocNet_dropout.py  main.py  main_PalmLocNet.py  main_PalmLocNet_1-0.py  main_PalmLocNet_dropout.py  main_fn2_pretrain_vggPalmLocNet_class_global.py  main_mulPalmLocNet_dropout.py  main_pretrain_resPalmLocNet_class.py  main_pretrain_vggPalmLocNet_224.py  main_pretrain_vggPalmLocNet_class.py  main_vggPalmLocNet.py  main_vggPalmLocNet_224.py  main_vggPalmLocNet_origin.py  readxml_org.py  test_pic.py  test_pretrain_vggPalmLocNet.py  test_pretrain_vggPalmLocNet_global.py  test_pretrain_vggPalmLocNet_local.py  vggPalmLocNet.py  video_picture_save.py  videotest.py
PLNet_1.0/: test_video.py
PLNet_1.0/PLNet_module/: test.py  train.py
PLNet_1.0/PLNet_module/data/: mydataset.py
PLNet_1.0/PLNet_module/lossfuc/: myloss.py
PLNet_1.0/PLNet_module/models/: PLNet.py
face_alian_c++/: CMakeLists.txt
face_alian_c++/src/: face_align.cpp
face_align_test/: CMakeLists.txt  main.cpp
face_align_test/include/: face_align.h
lossfuc/: myloss.py
models/: vgg.py
picture/testset/: test.txt
picture/testxml/: wangdong315.xml  wangdong364.xml
picture/trainset/: train.txt
picture/trainxml/: wangdong213.xml  wangdong222.xml  wangdong246.xml  wangdong287.xml  wangdong337.xml  wangdong353.xml  wangdong384.xml  wangdong398.xml  wangdong422.xml  wangdong485.xml
plnet-tensorrt/: get_engine.py  plnet_to_onnx.py
plnet-tensorrt/model/: PLNet.py
